[gd_scene load_steps=9 format=3 uid="uid://6uwhbcswn6ci"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_uejaj"]
[ext_resource type="Texture2D" uid="uid://cj2wufa08wnu6" path="res://icon.svg" id="2_gjavi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jopgl"]
size = Vector2(128, 128)

[sub_resource type="Gradient" id="Gradient_73qnd"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.699653, 0.699653, 0.699653, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_p6gti"]
gradient = SubResource("Gradient_73qnd")
width = 128
height = 12

[sub_resource type="Gradient" id="Gradient_kao88"]
offsets = PackedFloat32Array(0, 0.65493)
colors = PackedColorArray(0.929412, 0.247059, 0, 1, 0.305882, 1, 0.564706, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4nsqp"]
gradient = SubResource("Gradient_kao88")
width = 128
height = 12
fill_from = Vector2(0.140777, 0.519417)
fill_to = Vector2(0.699029, 0.36246)

[sub_resource type="CircleShape2D" id="CircleShape2D_f8b28"]
radius = 150.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_uejaj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_gjavi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jopgl")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = -64.0
offset_top = -93.0
offset_right = 64.0
offset_bottom = -29.0
texture_under = SubResource("GradientTexture2D_p6gti")
texture_progress = SubResource("GradientTexture2D_4nsqp")

[node name="MyAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MyAttack"]
shape = SubResource("CircleShape2D_f8b28")
debug_color = Color(0.812221, 0.383102, 0.396548, 0.42)

[node name="TAttackReady" type="Timer" parent="."]
wait_time = 0.7

[node name="THealReady" type="Timer" parent="."]

[connection signal="timeout" from="TAttackReady" to="." method="_on_t_attack_ready_timeout"]
[connection signal="timeout" from="THealReady" to="." method="_on_t_heal_ready_timeout"]
